<resources>
    <string name="app_name">MyNoteHilt</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Lịch</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_ana">Báo cáo</string>
    <string name="money_in">Tiền thu</string>
    <string name="money_out">Tiền chi</string>
    <string name="category">Danh mục</string>
    <string name="note">Ghi chú</string>
    <string name="name">Tên</string>
    <string name="fill_name_pls">Vui lòng nhập tên</string>
    <string name="icon">Biểu tượng</string>
    <string name="color">Màu sắc</string>
    <string name="save">Lưu</string>
    <string name="day">Ngày</string>
    <string name="by_month">Theo tháng</string>
    <string name="by_year">Theo năm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>