<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/color_B3F4F4"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLeft"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/tvHomeMoneyOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/selector_text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="7dp"
            android:text="@string/money_out"
            android:textAlignment="center"
            android:textColor="@drawable/selector_color_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvHomeMoneyIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/selector_text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="7dp"
            android:text="@string/money_in"
            android:textAlignment="center"
            android:textColor="@drawable/selector_color_text"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMemo"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/edtNameCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:hint="@string/fill_name_pls"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/icon"
        android:textColor="@color/color_FFEC407A"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvIcon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="GridLayoutManager"
        app:spanCount="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/color" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvColors"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="GridLayoutManager"
        app:spanCount="4" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginHorizontal="16dp"
        android:text="@string/save" />
</LinearLayout>
