<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.duongph.moneynote.presenter.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:background="@color/color_B3F4F4"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvHomeMoneyOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/selector_text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="7dp"
            android:text="@string/money_out"
            android:textAlignment="center"
            android:textColor="@drawable/selector_color_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvHomeMoneyIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/selector_text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="7dp"
            android:text="@string/money_in"
            android:textAlignment="center"
            android:textColor="@drawable/selector_color_text"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="5dp"
            android:text="@string/day"
            android:textColor="@color/color_FFEC407A"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPrevDay"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="6dp"
            app:tint="@color/color_FFEC407A"
            app:srcCompat="@drawable/arrow_left" />

        <TextView
            android:id="@+id/textCurrentDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/selector_text"
            android:gravity="center"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivNextDay"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="6dp"
            app:tint="@color/color_FFEC407A"
            app:srcCompat="@drawable/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="5dp"
            android:text="@string/note"
            android:textColor="@color/color_FFEC407A"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Nhập ghi chú"
            android:singleLine="true"
            app:srcCompat="@drawable/bg_text_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="5dp"
            android:text="@string/money_out"
            android:textColor="@color/color_FFEC407A"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.duongph.moneynote.common.MoneyEditText
            android:id="@+id/edtMoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789"
            android:hint="Nhập số tiền"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            app:srcCompat="@drawable/bg_text_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="đ"
            android:textColor="@color/color_FFEC407A"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/category"
        android:textColor="@color/color_FFEC407A"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHomeCategory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="4"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginHorizontal="16dp"
        android:text="@string/save" />
</LinearLayout>